--- a/survey_simplesort.ipynb
+++ b/survey_simplesort.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMJapkB3omx9Accn7btJu/I",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +15,6 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/kbg8146/AI_based_smart_nametag/blob/survey_smartnametag/smartnametag_survey3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -34,7 +22,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ywpn-JYSWEqS",
-        "outputId": "6cf52990-60ea-47c1-8bc7-262379618bc0"
+        "outputId": "10db69ab-7b87-4162-92ac-b683ea983eb1"
       },
       "outputs": [
         {
@@ -64,7 +52,7 @@
             "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests>=2.0.0->requests-oauthlib>=0.7.0->google-auth-oauthlib>=0.4.1->gspread) (3.4.1)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests>=2.0.0->requests-oauthlib>=0.7.0->google-auth-oauthlib>=0.4.1->gspread) (3.10)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests>=2.0.0->requests-oauthlib>=0.7.0->google-auth-oauthlib>=0.4.1->gspread) (2.4.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests>=2.0.0->requests-oauthlib>=0.7.0->google-auth-oauthlib>=0.4.1->gspread) (2025.1.31)\n"
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests>=2.0.0->requests-oauthlib>=0.7.0->google-auth-oauthlib>=0.4.1->gspread) (2025.4.26)\n"
           ]
         }
       ],
@@ -118,8 +106,12 @@
         "group_conditions = {\n",
         "    \"임베디드+면접스터디\": [\"임베디드\", \"면접스터디\"],\n",
         "    \"임베디드+팀프로젝트\": [\"임베디드\", \"팀프로젝트\"],\n",
-        "    \"방산+네트워킹\": [\"방산\", \"네트워킹\"],\n",
-        "    \"반도체+흥미\": [\"반도체\", \"흥미\"]\n",
+        "    \"반도체+면접스터디\": [\"반도체\", \"면접스터디\"],\n",
+        "    \"반도체+팀프로젝트\": [\"반도체\", \"팀프로젝트\"],\n",
+        "    \"AI+면접스터디\": [\"AI\", \"면접스터디\"],\n",
+        "    \"AI+팀프로젝트\": [\"AI\", \"팀프로젝트\"],\n",
+        "    \"방산+면접스터디\": [\"방산\", \"면접스터디\"],\n",
+        "    \"방산+팀프로젝트\": [\"방산\", \"팀프로젝트\"],\n",
         "}\n",
         "\n",
         "# ✅ 5. 그룹 분류 함수\n",
